# personality_generator

./: CMakeLists.txt  README.md  main.cpp
include/: human.hpp  trait.hpp  utilities.hpp
include/parents/: father.hpp  mother.hpp  parent.hpp
src/: human.cpp  trait.cpp
src/parents/: father.cpp  mother.cpp  parent.cpp
